[SELC-3964] (#313)
* [SELC-3407] Feat: API for token/exchange/fatturazione (#292)

* added first implementation of exchange/fatturazione

* remove duplication and fix tests

* [SELC-3464] Removed null and empty objects from REST response in exchange/fatturazione and {productId}/back-office (#296)

* [SELC-3485] Set resource request and limits - DEV (#300)

* Added tag external-v2 for automatic generation of open-api (#303)

Co-authored-by: pierpaolo.didato@emeal.nttdata.com <Aiap1955?^@#>

* Change path for backoffice pagopa client (#304)

Co-authored-by: pierpaolo.didato@emeal.nttdata.com <Aiap1955?^@#>

* Update github action with new tool to check breaking changes (#306)

Co-authored-by: pierpaolo.didato@emeal.nttdata.com <Aiap1955?^@#>

* [SELC-3607] Increase replicas - DEV (#310)

* [SELC-3964] - Mapped fields of institution from token's Institution data (#312)

* feature: mapped some fields of institution data from InstitutionUpdate object persisted in token.

* fix: sonar issue.

---------

Co-authored-by: Manuel Rafeli <manuel.rafeli@pagopa.it>
Co-authored-by: Andrea Grillo <andrea.grillo@pagopa.it>
Co-authored-by: pierpaolodidato89 <137791912+pierpaolodidato89@users.noreply.github.com>
Co-authored-by: pierpaolo.didato@emeal.nttdata.com <Aiap1955?^@#>
Co-authored-by: empassaro <113031808+empassaro@users.noreply.github.com>
Co-authored-by: andrea-putzu <106688558+andrea-putzu@users.noreply.github.com>